project has been organized

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
             "username": "postgres",
             "connectionTimeout": 30
         }
-    ]
+    ],
+    "java.compile.nullAnalysis.mode": "automatic"
 }
